// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mention-2.ts: user should be able remove mention on backspace 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "attrs": Object {
            "accessLevel": "",
            "id": "0",
            "text": "@Carolyn",
            "userType": null,
          },
          "type": "mention",
        },
        Object {
          "text": " ",
          "type": "text",
        },
        Object {
          "attrs": Object {
            "accessLevel": "",
            "id": "4",
            "text": "@Summer",
            "userType": null,
          },
          "type": "mention",
        },
        Object {
          "text": " ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`mention-2.ts: user should see space after node 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "attrs": Object {
            "accessLevel": "",
            "id": "4",
            "text": "@Summer",
            "userType": null,
          },
          "type": "mention",
        },
        Object {
          "text": " ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;
